--- a/parseLogs/package.json
+++ b/parseLogs/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "json2csv": "^5.0.6"
+    "json2csv": "^5.0.6",
+    "puppeteer": "^8.0.0"
   }
 }
