--- a/parseLogs/package.json
+++ b/parseLogs/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "json2csv": "^5.0.6",
-    "puppeteer": "^8.0.0"
+    "puppeteer": "^8.0.0",
+    "mkdirp": "^0.0.7"
   }
 }
